# wordle-autosolver-lite

./: README.md  __init__.py  __main__.py  common.py  pyproject.toml  requirements_dev.txt  setup.cfg  solver.py  tox.ini
data/: __init__.py  allowed_guesses.json
tests/: conftest.py  test_common.py  test_data.py  test_solver.py
wordle_autosolver_lite/: __init__.py  __main__.py  common.py  driver.py  solver.py
wordle_autosolver_lite/data/: __init__.py  allowed_nordle.json  freq_map.json
