[metadata]
name = wordle_autosolver_lite
version = 0.6.0
license_file = LICENSE
license = GPL-3.0
author = Kody Puebla
author_email = pueblakody@gmail.com
url = https://github.com/pueblak/wordle-solver
keywords = wordle, auto, automate, solve, solver, lite, optimize, optimal, best
description = A Wordle solver that can generate near-optimal decision trees to help the user solve the game
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Games/Entertainment
    Natural Language :: English
    Development Status :: 4 - Beta

[options]
include_package_data = True
package_dir =
    = data
packages = find:
install_requires =
    tqdm
python_requires = >=3.9

[options.packages.find]
where = data

[options.package_data]
* = *.json
